--- a/localisation/LegacyOfRome.csv
+++ b/localisation/LegacyOfRome.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 eunuch;宦官;;;;;;;;;;x
 eunuch_desc;这个人物已经被阉割成了一个宦官.;;;;;;;;;;x
 blinded;致盲;;;;;;;;;;x
