--- a/localisation/sunset_invasion.csv
+++ b/localisation/sunset_invasion.csv
@@ -1,6 +1,6 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
-mesoamerican;中美洲人;;;;;;;;;;x
-nahuatl;那华;;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+mesoamerican;中美洲文化;;;;;;;;;;x
+nahuatl;那瓦人;;;;;;;;;;x
 aztec;阿兹特克;;;;;;;;;;x
 e_mexikha;阿兹特克帝国;;;;;;;;;;x
 e_mexikha_adj;阿兹特克;;;;;;;;;;x
