--- a/localisation/v1_06a.csv
+++ b/localisation/v1_06a.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 HOLDINGS_DEC_LOSS;占有度: ;;;;;;;;;;x
 TOTAL_DEC_DELTA;总体腐化度: ;;;;;;;;;;x
 HAS_A_JOB_DEC;接受一个任务: ;;;;;;;;;;x
@@ -110,7 +110,7 @@ EVTOPTA86825;我们要有信心.;;;;;;;;;;x
 EVTOPTB86825;哈哈... 井当然是干的...;;;;;;;;;;x
 EVTTOOLTIP86826;坐下来祷告.;;;;;;;;;;x
 EVTDESC86826;当你坐下来祷告时, 你认出不远处有另一支队伍. 虽然你怀疑那只是海市唇楼, 但你们还是决定跟随他们, 结果他们把你们带到了另一处绿洲, 就在你先前认为的绿洲所在地的东南一点的位置.;;;;;;;;;;x
-EVTOPTA86826;赞美真主!;;;;;;;;;;x
+EVTOPTA86826;赞美真主！;;;;;;;;;;x
 EVTTOOLTIP86827;已经绝望了.;;;;;;;;;;x
 EVTDESC86827;经历了愤怒和绝望后, 你捡起一块大石头奋力地扔过沙丘的顶端, 却听到对面传来一声尖叫. 你穿过去后才发现, 那是一块有着清澈水源的真正的绿洲... 旁边还有一个不省人事的贝都因人.;;;;;;;;;;x
 EVTOPTA86827;好吧... 谁想到呢;;;;;;;;;;x
@@ -129,7 +129,7 @@ EVTTOOLTIP86846;救这位穿长袍的人.;;;;;;;;;;x
 EVTDESC86846;发生了一场凶猛的战斗, 几个强盗被这个穿长袍的人杀死了, 此人显然是名高手. 强盗余党被你的随从清理完后, 着袍人向你鞠了一躬. 他给了你一枚雕有奇怪符号的戒指, 正当你想问清楚符号的含义时, 这人就迅速在沙漠中走远了, 不见了.;;;;;;;;;;x
 EVTOPTA86846;太罕见了.;;;;;;;;;;x
 EVTDESC86850;当你穿越沙漠往回赶时, 你经过了另一支朝圣者队伍的残骸. 他们的肉早已被动物啃干净, 残骸已成了麦加朝圣路上提醒人们此一路有多危险的标志.  你很庆幸自己这一路都走过来了.;;;;;;;;;;x
-EVTOPTA86850;我们快到家了, 感谢阿拉.;;;;;;;;;;x
+EVTOPTA86850;我们快到家了, 感谢真主.;;;;;;;;;;x
 EVTDESC86855;在你回家的旅途中,你在广阔的沙漠中遇到了可怕地沙尘暴.能被迫在一块岩石后面寻找庇护以逃避风沙. 在麦加朝圣之后你的信仰得到了慰藉, 你整个晚上都在祈祷.黎明到来之后，你感到精疲力竭.;;;;;;;;;;x
 EVTOPTA86855;我会记住这个夜晚的.;;;;;;;;;;x
 EVTDESC86860;你遇到一些和你一样朝圣之后准备回家的人.他们除了衣服之外所有东西都被土匪抢走了，以至于他们根本无法进行旅行.;;;;;;;;;;x
