--- a/localisation/v2_40.csv
+++ b/localisation/v2_40.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 set_government_type;政体改变为§Y$GOVERNMENT$§!\n;;;;;;;;;;x
 feudal_government;封建制;;;;;;;;;;x
 republic_government;共和制;;;;;;;;;;x
@@ -229,7 +229,7 @@ world_steppe_east;东大草原;;;;;;;;;;x
 world_steppe;大草原;;;;;;;;;;x
 world_europe;欧洲;;;;;;;;;;x
 world_middle_east;中东;;;;;;;;;;x
-world_india;印度;;;;;;;;;;x
+world_india;天竺;;;;;;;;;;x
 world_steppe_tarim;塔里木盆地;;;;;;;;;;x
 custom_eastern_baltic;东波罗的;;;;;;;;;;x
 custom_frisia;弗里西亚;;;;;;;;;;x
@@ -252,9 +252,9 @@ d_altay;阿勒泰;;;;;;;;;;x
 d_otuken;于都斤;;;;;;;;;;x
 d_khangai;杭爱;;;;;;;;;;x
 d_ikh_bogd;伊赫博格;;;;;;;;;;x
-k_khotan;和阗;;;;;;;;;;x
+k_khotan;于阗;;;;;;;;;;x
 d_kashgar;喀什噶尔;;;;;;;;;;x
-d_khotan;和阗;;;;;;;;;;x
+d_khotan;于阗;;;;;;;;;;x
 d_karashar;焉耆;;;;;;;;;;x
 d_kumul;哈密;;;;;;;;;;x
 EVTOPTA_WOL_415;有蝴蝶在我的肚子上!;;;;;;;;;;x
@@ -477,16 +477,16 @@ HAS_LOWER_MAX_POPULATION_THAN;最大人口少于;;;;;;;;;;x
 HAS_HIGHER_MAX_POPULATION_THAN;最大人口多于;;;;;;;;;;x
 HAS_LOWER_POPULATION_GROWTH_THAN;人口增长低于;;;;;;;;;;x
 HAS_HIGHER_POPULATION_GROWTH_THAN;人口增长高于;;;;;;;;;;x
-khalka;喀尔喀;;;;;;;;;;x
+khalka;喀尔喀人;;;;;;;;;;x
 buryat;不里牙惕;;;;;;;;;;x
-naiman;乃蛮;;;;;;;;;;x
-oirat;斡亦剌惕;;;;;;;;;;x
-uyghur;回鹘;;;;;;;;;;x
-basmyl;拔悉密;;;;;;;;;;x
-yagma;样磨;;;;;;;;;;x
-chigil;处月;;;;;;;;;;x
-khitan;契丹;;;;;;;;;;x
-sogdian;粟特;;;;;;;;;;x
+naiman;乃蛮人;;;;;;;;;;x
+oirat;斡亦剌惕人;;;;;;;;;;x
+uyghur;回鹘人;;;;;;;;;;x
+basmyl;拔悉密人;;;;;;;;;;x
+yagma;样磨人;;;;;;;;;;x
+chigil;处月人;;;;;;;;;;x
+khitan;契丹人;;;;;;;;;;x
+sogdian;粟特人;;;;;;;;;;x
 nomad_succession;游牧继承;;;;;;;;;;x
 succ_nomadic;游牧继承;;;;;;;;;;x
 TITLE_NEW_PRIMARY_IS_NOMADIC;§R游牧部落不能设置主头衔！§!;;;;;;;;;;x
@@ -579,7 +579,7 @@ HOLY_SITE_NO_SETTLEMENT;(未定居);;;;;;;;;;x
 CANNOT_BUILD;你的政体不允许建造这个。;;;;;;;;;;x
 b_argh;啊;;;;;;;;;;x
 b_anthrachs;安施拉克斯;;;;;;;;;;x
-b_dunkheger;敦赫戈;;;;;;;;;;x
+b_dunkheger;敦贺戈;;;;;;;;;;x
 b_muztau;慕兹陶;;;;;;;;;;x
 b_kyzyl;克孜勒;;;;;;;;;;x
 b_otuken;于都斤;;;;;;;;;;x
@@ -595,11 +595,11 @@ b_yarkand;叶尔羌;;;;;;;;;;x
 b_kashgar;喀什噶尔;;;;;;;;;;x
 b_aksu_mongolia;阿克苏;;;;;;;;;;x
 b_tumshuk;图木舒克;;;;;;;;;;x
-b_khotan;和阗;;;;;;;;;;x
+b_khotan;于阗;;;;;;;;;;x
 b_keriya;克里雅;;;;;;;;;;x
 b_niya;尼雅;;;;;;;;;;x
-b_cherchen;且末;;;;;;;;;;x
-b_charkliq;若羌;;;;;;;;;;x
+b_cherchen;车尔臣;;;;;;;;;;x
+b_charkliq;卡克里克;;;;;;;;;;x
 b_miran;米兰;;;;;;;;;;x
 b_karashar;焉耆;;;;;;;;;;x
 b_kucha;龟兹;;;;;;;;;;x
@@ -615,9 +615,9 @@ c_trondelag_adj;特伦德拉格;;;;;;;;;;x
 PROV275;尼达罗斯;;;;;;;;;;x
 PROV1438;叶尔羌;;;;;;;;;;x
 PROV1439;喀什噶尔;;;;;;;;;;x
-PROV1440;和阗;;;;;;;;;;x
-PROV1441;且末;;;;;;;;;;x
-PROV1442;若羌;;;;;;;;;;x
+PROV1440;于阗;;;;;;;;;;x
+PROV1441;车尔臣;;;;;;;;;;x
+PROV1442;卡克里克;;;;;;;;;;x
 PROV1443;焉耆;;;;;;;;;;x
 PROV1444;龟兹;;;;;;;;;;x
 PROV1445;阿克苏;;;;;;;;;;x
