--- a/localisation/v2_42.csv
+++ b/localisation/v2_42.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 create_aragon_desc;在这些土地建立阿拉贡王国，我将开启一个新纪元。;;;;;;;;;;x
 create_portugal_desc;在这些土地建立葡萄牙王国，我将开启一个新纪元。;;;;;;;;;;x
 create_castille_desc;在这些土地建立卡斯蒂尔王国，我将开启一个新纪元。;;;;;;;;;;x
@@ -37,42 +37,42 @@ SET_DIVINE_BLOOD;§Y$DYNASTY$§!现在被认为可以血亲圣婚。\n;;;;;;;;;;
 UNSET_DIVINE_BLOOD; §Y$DYNASTY$§!家族不再进行血亲圣婚。\n;;;;;;;;;;x
 AIREASON_AMBITION;野心;;;;;;;;;;x
 b_kroran;楼兰;;;;;;;;;;x
-b_endere;唐兰;;;;;;;;;;x
+b_endere;安得悦;;;;;;;;;;x
 b_dandan_uilik;丹丹乌里克;;;;;;;;;;x
 b_korla;坤闾;;;;;;;;;;x
 b_shanguo;山国;;;;;;;;;;x
-b_turfan;西州;;;;;;;;;;x
+b_turfan;吐鲁番;;;;;;;;;;x
 b_tashkurgan;竭盘陀;;;;;;;;;;x
 b_yecheng;叶城;;;;;;;;;;x
 b_mazar;麻札;;;;;;;;;;x
 b_jiaohe;交河;;;;;;;;;;x
-b_guma;皮亢;;;;;;;;;;x
+b_guma;固玛;;;;;;;;;;x
 b_wensu;温宿;;;;;;;;;;x
-b_xayar;沙雁州;;;;;;;;;;x
+b_xayar;沙雁;;;;;;;;;;x
 b_danhuan;单桓;;;;;;;;;;x
 b_wutanzili;乌贪訾离;;;;;;;;;;x
 b_huhu;狐胡;;;;;;;;;;x
 b_loulan;楼兰;;;;;;;;;;x
-b_kargan;纽缚波;;;;;;;;;;x
-b_ruoqiang;石头镇;;;;;;;;;;x
+b_kargan;鄯善;;;;;;;;;;x
+b_ruoqiang;若羌;;;;;;;;;;x
 b_mocheng;末城;;;;;;;;;;x
-b_zuomo;播仙镇;;;;;;;;;;x
+b_zuomo;左末;;;;;;;;;;x
 b_yuling;扜零;;;;;;;;;;x
-b_jingjue;尼壤;;;;;;;;;;x
+b_jingjue;精绝;;;;;;;;;;x
 b_jiandu;鞬都;;;;;;;;;;x
 b_shangwangguo;山王国;;;;;;;;;;x
-b_xiuxun;休循州;;;;;;;;;;x
-b_wulei;乌垒州;;;;;;;;;;x
-b_bay;阿悉言城与俱毗罗城;;;;;;;;;;x
+b_xiuxun;休循;;;;;;;;;;x
+b_wulei;乌垒;;;;;;;;;;x
+b_bay;拜城;;;;;;;;;;x
 b_toqsu;它乾;;;;;;;;;;x
 b_awat;阿瓦提;;;;;;;;;;x
 b_kelpin;阔纳齐兰;;;;;;;;;;x
-b_fukang;尔然则;;;;;;;;;;x
+b_fukang;阜康;;;;;;;;;;x
 b_qiemi;且弥;;;;;;;;;;x
-b_balikun;甘露川;;;;;;;;;;x
+b_balikun;巴里坤;;;;;;;;;;x
 b_qian_pulei;前蒲类;;;;;;;;;;x
 b_hou_pulei;后蒲类;;;;;;;;;;x
-b_yulishi;渠犁;;;;;;;;;;x
+b_yulishi;郁立师;;;;;;;;;;x
 b_karghalik;斫句迦;;;;;;;;;;x
 b_weixu;危须;;;;;;;;;;x
 b_weili;尉犁;;;;;;;;;;x
@@ -85,15 +85,15 @@ b_akto;阿克土;;;;;;;;;;x
 b_ulugqat;乌恰;;;;;;;;;;x
 b_uqturpan;乌什;;;;;;;;;;x
 b_aral;阿拉尔;;;;;;;;;;x
-b_qira;坎城;;;;;;;;;;x
+b_qira;策勒;;;;;;;;;;x
 b_yeyik;叶亦克;;;;;;;;;;x
-b_sutang;粟特;;;;;;;;;;x
+b_sutang;苏塘;;;;;;;;;;x
 b_lop;辅日海;;;;;;;;;;x
 b_merdek;木垒;;;;;;;;;;x
-b_yuni;尉犁;;;;;;;;;;x
+b_yuni;扜泥;;;;;;;;;;x
 b_tiemenguan;铁门关;;;;;;;;;;x
 b_qigexing;七个星;;;;;;;;;;x
-b_kizil;龟兹;;;;;;;;;;x
+b_kizil;克孜尔;;;;;;;;;;x
 b_subashi;苏巴什;;;;;;;;;;x
 b_kumtura;库木吐喇;;;;;;;;;;x
 b_bezeklik;柏孜克里克;;;;;;;;;;x
