--- a/localisation/text3.csv
+++ b/localisation/text3.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 HAS_NOT_LOVER;没有情人;;;;;;;;;;x
 HAS_LOVER;有情人;;;;;;;;;;x
 FAM_IN_LAWS;姻亲关系;;;;;;;;;;x
@@ -407,7 +407,7 @@ alert_noheir_instant;§Y没有家族继承人!§!;;;;;;;;;;x
 KICK_PLAYER;踢出玩家;;;;;;;;;;x
 GENDER_LAWS;性别法;;;;;;;;;;x
 EVTOPTB5024;我乐在其中;;;;;;;;;;x
-pommeranian;波美拉尼亚;;;;;;;;;;x
+pommeranian;波美拉尼亚人;;;;;;;;;;x
 d_pommerania;波美拉尼亚;;;;;;;;;;x
 d_pommerania_adj;波美拉尼亚;;;;;;;;;;x
 ALREADY_CONTRACTED;他们已经受雇于§Y$OWNER$§!。;;;;;;;;;;x
