--- a/localisation/text9b.csv
+++ b/localisation/text9b.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 EVTDESC61152;借口精神失常把你关押起来的前摄政者已经失去了宫廷中的影响力.新摄政者释放了你.;;;;;;;;;;x
 EVTOPTA61152;太晚了.;;;;;;;;;;x
 EVTOPTB61152;全世界都看好了！我来了！;;;;;;;;;;x
