--- a/localisation/v1_09b.csv
+++ b/localisation/v1_09b.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 d_venetian_navy;亚德里亚海舰队;;;;;;;;;;x
 d_venetian_navy_adj;亚德里亚海舰队;;;;;;;;;;x
 d_genoese_navy;力久利安海舰队;;;;;;;;;;x
