--- a/localisation/v1_101.csv
+++ b/localisation/v1_101.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 NAME_W_NICK;$TITLE$ $NAME$ '$NICK$';;;;;;;;;;x
 VASSAL_RETRACTION_LOG;$TOP_LIEGE$已收回$VASSAL$$OLD_LIEGE$头衔。;;;;;;;;;;x
 opinion_retracted_my_vassal;收回封臣头衔。;;;;;;;;;;x
@@ -23,7 +23,7 @@ RETRACT_VASSAL_INTERACTION_DECLINE_SETUP;收回头衔遭拒。;;;;;;;;;;x
 RETRACT_VASSAL_INTERACTION_DECLINE_LOG;§Y[Recipient.GetBestName]§!拒绝按§Y[Actor.GetBestName]§!要求的,收回封臣§Y[ThirdPartyCharacter.GetBestName]§!的头衔。;;;;;;;;;;x
 EVTDESC274;主上，我接受您收回我[Root.GetBestName]头衔的决定，尽管这会让我悲痛万分。;;;;;;;;;;x
 EVTDESC275;您违背了封臣法!真让人难以接受！我不惜一战也要捍卫我的头衔！;;;;;;;;;;x
-CANNOT_DESTROY_GAVELKIND_TITLE;根据男子均分继承制，您不能销毁头衔。;;;;;;;;;;x
+CANNOT_DESTROY_GAVELKIND_TITLE;根据男子均分继承制，您不能收回头衔。;;;;;;;;;;x
 INTERACTION_REQUIRES_PIETY;§Y[Actor.GetTitledFirstName]§! 可以承受失去 §Y$COST$§! [Player.Religion.GetPietyName];;;;;;;;;;x
 INTERACTION_REQUIRES_MONEY;§Y[Actor.GetTitledFirstName]§! 可以支付 §Y$COST$§W¤;;;;;;;;;;x
 INTERACTION_REQUIRES_PRESTIGE;§Y[Actor.GetTitledFirstName]§! 可以承受失去 §Y$COST$§! 点威望;;;;;;;;;;x
