--- a/localisation/v2_01.csv
+++ b/localisation/v2_01.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 ENDGAME_TEXT_JEWISH;你已经成为了犹太人,由于没有亚伯拉罕之裔DLC,因此,不能继续游戏,游戏结束.;;;;;;;;;;x
 NOT_ALLOWED_JEWISH;由于没有激活亚伯拉罕之裔DLC，你不能扮演§Y犹太人§!！;;;;;;;;;;x
 NOT_ALLOWED_JEWISH_MP;§Y$PLAYER$§!不能在没有激活亚伯拉罕之裔DLC的情况下扮演§Y犹太人§!。;;;;;;;;;;x
