--- a/localisation/v2_10d.csv
+++ b/localisation/v2_10d.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 MATCHMAKING_CHATWELCOME;欢迎进行CK2游戏聊天!;;;;;;;;;;x
 CHAT_SYSTEM;聊天系统;;;;;;;;;;x
 MATCHMAKING_FRIEND_STATUS_PLAYING_THIS;进行CK2游戏;;;;;;;;;;x
