--- a/localisation/v2_14.csv
+++ b/localisation/v2_14.csv
@@ -1,2 +1,2 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 NOMINATE_BISHOP_TO_POPE_INTERACTION_LONG_DESC;你能请求宗教领袖设置一个你选择的主教;;;;;;;;;;x
