--- a/localisation/v2_20.csv
+++ b/localisation/v2_20.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 e_germany;日耳曼尼亚;;;;;;;;;;x
 e_germany_adj;日耳曼;;;;;;;;;;x
 k_lotharingia;中法兰克;;;;;;;;;;x
@@ -255,8 +255,8 @@ NOT_IS_ALLIED_WITH;没有与§Y$NAME$结盟;;;;;;;;;;x
 IS_ALLIED_WITH;与§Y$NAME$§!结盟;;;;;;;;;;x
 HINT_REL_VIEW_TEXT_3_CHRISTIAN;许多基督教信仰中都同时存在宗教领袖和牧首。自主牧首是各自王国的牧区的统治者。这使得不同的王国在信仰同一宗教的情况下，各自拥有不同的宗教领袖。;;;;;;;;;;x
 HINT_REL_VIEW_TEXT_4_CHRISTIAN;圣像破坏教会最初不存在牧首。但是教会如果控制了君士坦丁堡，就可以建立起自己的牧区。同时，拜占庭帝国的正教统治者可以控制五大牧区以修复东西教会分裂。;;;;;;;;;;x
-HINT_REL_VIEW_TEXT_3_CHRISTIAN_NOHEAD;有些基督教异端不存在宗教领袖，如清洁派、瓦勒度派、罗拉德派、波各米勒派和祈祷者。;;;;;;;;;;x
-HINT_REL_VIEW_TEXT_4_CHRISTIAN_NOHEAD;在这些宗教中，清洁派甚至允许女性担任牧师。而祈祷者不仅允许女性牧师，还与祆教一样允许近亲婚姻。;;;;;;;;;;x
+HINT_REL_VIEW_TEXT_3_CHRISTIAN_NOHEAD;有些基督教异端不存在宗教领袖，如清洁派、瓦勒度派、罗拉德派、波各米勒派和祷告派。;;;;;;;;;;x
+HINT_REL_VIEW_TEXT_4_CHRISTIAN_NOHEAD;在这些宗教中，清洁派甚至允许女性担任牧师。而祷告派不仅允许女性牧师，还与祆教一样允许近亲婚姻。;;;;;;;;;;x
 HINT_REL_VIEW_TEXT_3_CATHOLIC;与其他宗教不同的是，天主教会认为教宗是上帝在地上的代行人。他比其他宗教领袖宗教的宗教领袖拥有更多的权利。不过，如果一个主教对教宗的忠诚超过对他们世俗领主的忠诚，他们将会把税交到罗马城。解决这个问题的一个方法是设立伪教宗。他会是对领主言听计从的傀儡。;;;;;;;;;;x
 HINT_REL_VIEW_TEXT_4_CATHOLIC;另一个确保主教对你有好感的方法是降低王权法，或者使用自由绶职法来指定忠于你的主教。;;;;;;;;;;x
 HINT_REL_VIEW_TEXT_3_ZOROASTRIAN;祆教统治者可以通过近亲婚姻来巩固王朝统治并取悦封臣。祆教徒对习惯于近亲结婚并对生出先天缺陷的婴儿更有抗性，但是风险仍旧存在。;;;;;;;;;;x
@@ -286,7 +286,7 @@ WIDUKIND_ARMY;萨克森起义;;;;;;;;;;x
 c_chandax_adj_greek;哥提那;;;;;;;;;;x
 c_chandax_adj_italian;哥提那;;;;;;;;;;x
 TITLE_CREATION_TEMPORARY_TITLE;临时头衔所有者及其封臣不可以创建头衔.;;;;;;;;;;x
-TEMP_T_HOLDER_CANT_DESTROY_T;临时头衔所有者及其封臣不可以销毁头衔.;;;;;;;;;;x
+TEMP_T_HOLDER_CANT_DESTROY_T;临时头衔所有者及其封臣不可以收回头衔.;;;;;;;;;;x
 EVTTITLE_CM_1000;国家分裂;;;;;;;;;;x
 EVTDESC_CM_1000;在你父亲丕平死时，他将法兰人帝国一分为二交给你和你的弟兄。他分配土地的方案本意是让你们两彼此合作，可现实似乎适得其反。每次冲突时，你的兄弟都想阻挠你的计划并削弱你的地位。你们现在还是共治国王，但这和平的局面无法注定长久……;;;;;;;;;;x
 EVTOPTA_CM_1000;他卑鄙的图谋不会得逞！;;;;;;;;;;x
@@ -376,7 +376,7 @@ ERA_CHAR_INFO_34002;曼苏尔在他兄弟死后成了阿拉伯帝国唯一的统
 ERA_CHAR_INFO_74413;罗湿陀罗拘陀的奎师那一世在756年击败数个觊觎王座的竞争者后坐稳了江山。他与遮娄其王朝和普腊蒂哈腊王朝作战，征服了卡纳塔克，进一步加强了他的王朝。他同时又是建筑的支持者，下令建造了许多庙宇和纪念建筑。;;;;;;;;;;x
 ERA_CHAR_INFO_163112;“白衫”哈夫丹是传说中的维京人“洛德布洛克”拉格纳的儿子。他领导了数次针对英格兰的成功远征，而后来也成为了865年“异教徒大军”的首领之一。哈夫丹成功地在英格兰建立了一个大国，南及伦敦。但后来他与贵族交恶，最终遭到驱逐。随后他一直寻求新的冒险，最终作为一个维京人死在一次大胆的远征中。;;;;;;;;;;x
 ERA_CHAR_INFO_40605;留里克是来自瑞典的维京人. 他借着拉多加附近部落内部的混乱成功在东方建立了一个诺斯人的国家. 他的继任者进一步扩张他们的影响力,以至于他们统治地域远及基辅. 这个家族随后接纳了斯拉夫人的文化和语言(正如许多诺斯移民一样). 留里克的后人最终成为了俄罗斯的第一任沙皇.;;;;;;;;;;x
-ERA_CHAR_INFO_90104;当“虔诚者”路易一死，加罗林帝国就在他的儿子们手中因继承问题陷入了内战。战后，查理按照和约分得了西法兰克。然而，当洛泰尔死后，查理和其兄弟路德维希之间的力量平衡被破坏了，他们长时间地为洛泰尔留下的权力和土地斗争。而当路德维希死后，查理更尝试夺取日耳曼的领土，却最终在887年的战争中，穿越阿尔卑斯山时去世。;;;;;;;;;;x
+ERA_CHAR_INFO_90104;当“虔诚者”路易一死，加洛林帝国就在他的儿子们手中因继承问题陷入了内战。战后，查理按照和约分得了西法兰克。然而，当洛泰尔死后，查理和其兄弟路德维希之间的力量平衡被破坏了，他们长时间地为洛泰尔留下的权力和土地斗争。而当路德维希死后，查理更尝试夺取日耳曼的领土，却最终在887年的战争中，穿越阿尔卑斯山时去世。;;;;;;;;;;x
 ERA_CHAR_INFO_90107;当和他的兄弟签订了凡尔登条约后，路德维希统治了东法兰克和巴伐利亚。在他父亲死前他就统治着这些国度。在这之后，他一直努力在法兰克帝国内扩张，时而和他的兄弟“秃头”查理结盟，时而和他作对。他参与对抗了萨克森的叛乱，又与摩尔多瓦人作战。他是教会的支持者，尽其所能压制信仰原始宗教的子民。而德国在他的统治下也慢慢显露出新的文化认同。;;;;;;;;;;x
 ERA_CHAR_INFO_1700;“马其顿人”巴西尔作为一个普通农户的儿子在马其顿出生。度过不安定的早年，他最后进入了为皇室成员服务的部门中任职。时间一长，他成了皇帝米海尔的忠实好友。利用其特殊地位。他不久就成为了共治皇帝，随后谋杀了米海尔，从而成为帝国唯一的皇帝。取得权力后，因其对帝国管理的效率和贡献，他获得了良好的声誉。他重新恢复了与教宗的良好关系，在与保罗派异端和阿拉伯人鏖战之余，还加强了东部的边防。;;;;;;;;;;x
 ERA_CHAR_INFO_34014;穆塔兹年仅19岁便在866年成为哈里发。当时的阿巴斯帝国权力混乱，派系纷争不断。在经历了与他敌人的血腥对抗后，他似乎就要成功了。但那时他的国库已空，士兵叛乱让其命运彻底改变。最终他被俘虏，在遭到殴打后被关在房间里饿死，年仅24岁。;;;;;;;;;;x
