--- a/localisation/v2_20b.csv
+++ b/localisation/v2_20b.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 EVTOPTC91355;也许我可以求于 [From.GetHerHis] 贪婪的一面...;;;;;;;;;;x
 EVTOPTD91355;[Root.Religion.GetRandomGodName] 也许会欣喜与我捐献的小钱钱.;;;;;;;;;;x
 EVTOPTE91355;也许我可以让 [From.GetHerHis] [From.Spouse.GetHusbandWife] 到我的阵营来.;;;;;;;;;;x
@@ -294,7 +294,7 @@ EVTDESC_CM_4399;陛下, 您的慷慨捐献定会为人所知. 我和教士们都
 EVTOPTA_CM_4399;赞美 [Root.Religion.GetRandomGodName].;;;;;;;;;;x
 OVERWRITE_HOLDING;在部落聚落之上建立新的领地;;;;;;;;;;x
 borrowed_from_haruriyyah;欠哈鲁里耶派 300¤;;;;;;;;;;x
-EVTDESC_CM_4303;愿安宁伴随您,最伟大的 [Root.GetTitledFirstName]. 如您所知, 我们组织需要领导者, 而鉴于您的负债, 我恳请您送您那高贵的儿子[FromFrom.GetFirstName]来我们这任事. 当然,这会让他丧失继承权. 安拉保佑您,\n\n[From.GetTitledName];;;;;;;;;;x
+EVTDESC_CM_4303;愿安宁伴随您,最伟大的 [Root.GetTitledFirstName]. 如您所知, 我们组织需要领导者, 而鉴于您的负债, 我恳请您送您那高贵的儿子[FromFrom.GetFirstName]来我们这任事. 当然,这会让他丧失继承权. 真主保佑您,\n\n[From.GetTitledName];;;;;;;;;;x
 EVTTITLE_CM_4309;哈鲁里耶派;;;;;;;;;;x
 EVTDESC_CM_4309;一个新的穆斯林教团成立了, 他们自认为是沿袭最古老的哈鲁里传统, 发誓保护穆斯林对抗不信者和各路多神教. 哈鲁里正是用毒剑刺杀阿里哈里发之人,认为阿里是伊斯兰教的毒瘤. 这个新晋组织宣誓要有着一样的勇气和信念对抗唯一信仰的敌人. 他们自称为"哈鲁里耶派";;;;;;;;;;x
 EVTOPTA_CM_4309;我多半有用他们的地方;;;;;;;;;;x
