--- a/localisation/v2_20d.csv
+++ b/localisation/v2_20d.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 vice_royalty_2_desc;建立王国及公国总督.;;;;;;;;;;x
 duke_vice_royalties;允许王国及公国总督;;;;;;;;;;x
 PLOT_POWER_DESC;密谋通过获得支持者来提高成功率,高密谋值会解锁更多的特殊密谋决议及时间.让你的间谍主管在你的密谋目标的所在地建立间谍网将会大大提高你的密谋成功率.;;;;;;;;;;x
