--- a/localisation/v2_34.csv
+++ b/localisation/v2_34.csv
@@ -1,4 +1,4 @@
-#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 EVTDESC_WOL_431;手挽着手, [FromFrom.GetFirstName] 和我漫步在附近的小溪旁. 我们笑着互相分享秘密 至少有一个小时. 这是分享八卦的时刻... 是不是 [FromFrom.GetSubjectPronoun] 准备搞上另一个 [FromFrom.GetManWoman]？我倾下身 开始对着 [FromFrom.GetPossPronoun] 的耳朵私语...;;;;;;;;;;x
 EVTDESC_WOL_431_CR;我与 [FromFrom.GetFirstName] 手挽着手走在附近的溪流边散步，我们都很高兴并互且相分享了彼此的小秘密。在沉默了片刻后，我倚在[FromFrom.GetPossPronoun]耳边公开了我最大的秘密——我与[FromFrom.GetObjectPronoun]的真实感情...;;;;;;;;;;x
 EVTDESC_WOL_1003_SPY_RESULT;一个仆人在尾随跟踪 [target_spy_on.GetFirstName] 后脸色发白结结巴巴的报告了他的消息,他看到我的 [GetFromFromRelation] 与 [From.GetTitledName] 进了一间客房里.那个可怜的仆人躲在一副纺织的挂毯后面看到了一切!;;;;;;;;;;x
